updated responses from services and controllers and added theme update pipe line
